[FIX] account_form

--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -172,6 +172,23 @@
                         </strong>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-4 horizontal_dotted_line" data-content="............/............/...............">
+                        <strong>
+                            วันที่
+                        </strong>
+                    </div>
+                    <div class="col-4 horizontal_dotted_line" data-content="............/............/...............">
+                        <strong>
+                            วันที่
+                        </strong>
+                    </div>
+                    <div class="col-4 horizontal_dotted_line" data-content="............/............/...............">
+                        <strong>
+                            วันที่
+                        </strong>
+                    </div>
+                </div>
             </div>
         </div>
     </template>
