--- a/rjc_stock_form/reports/deliveryslip_layout.xml
+++ b/rjc_stock_form/reports/deliveryslip_layout.xml
@@ -119,6 +119,7 @@
                         <thead>
                             <tr>
                                 <th><strong>Product</strong></th>
+                                <th><strong>Description</strong></th>
                                 <th name="lot_serial" t-if="has_serial_number" groups="stock.group_lot_on_delivery_slip">
                                     Lot/Serial Number
                                 </th>
@@ -135,6 +136,9 @@
                                     <p t-if="o.picking_type_code == 'incoming'">
                                         <span t-field="move_line.product_id.sudo().description_pickingin"/>
                                     </p>
+                                </td>
+                                <td>
+                                    <span t-field="move_line.move_id.name"></span>
                                 </td>
                                 <td t-if="has_serial_number and move_line.lot_name" groups="stock.group_lot_on_delivery_slip">
                                     <span t-field="move_line.lot_name"/>
