--- a/rjc_account_form/reports/invoice_credit_note_layout.xml
+++ b/rjc_account_form/reports/invoice_credit_note_layout.xml
@@ -67,15 +67,26 @@
                     </thead>
                     <tbody>
                         <t t-set="column" t-value="1"/>
-                        <tr t-foreach="o.invoice_line_ids" t-as="line">
-                            <td><span t-esc="column"/></td>
-                            <td><span t-field="line.product_id.default_code"/></td>
-                            <td><span t-field="line.name"/></td>
-                            <td class="text-right"><span t-field="line.quantity"/></td>
-                            <td class="text-right"><span t-field="line.price_unit"/></td>
-                            <td class="text-right"><span t-field="line.price_subtotal" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
-                            <t t-set="column" t-value="column+1"/>
-                        </tr>
+                        <t t-foreach="o.invoice_line_ids" t-as="line">
+                            <tr t-att-class="'font-weight-bold o_line_section' if line.display_type == 'line_section' else 'font-italic o_line_note' if line.display_type == 'line_note' else ''">
+                                <t t-if="not line.display_type" name="account_invoice_line_accountable">
+                                    <td><span t-esc="column"/></td>
+                                    <td><span t-field="line.product_id.default_code"/></td>
+                                    <td><span t-field="line.name"/></td>
+                                    <td class="text-right"><span t-field="line.quantity"/></td>
+                                    <td class="text-right"><span t-field="line.price_unit"/></td>
+                                    <td class="text-right"><span t-field="line.price_subtotal" t-options='{"widget": "monetary", "display_currency": o.currency_id}'/></td>
+                                    <t t-set="column" t-value="column+1"/>
+                                </t>
+                                <t t-if="line.display_type">
+                                    <td/>
+                                    <td t-att-colspan="colspan">
+                                        <span t-field="line.name"/>
+                                    </td>
+                                    <td/><td/><td/><td/>
+                                </t>
+                            </tr>
+                        </t>
                     </tbody>
                 </table>
             </div>
