--- a/l10n_th_withholding_tax_cert_form/static/scss/style_report.scss
+++ b/l10n_th_withholding_tax_cert_form/static/scss/style_report.scss
@@ -6,8 +6,13 @@
 
 .o_report_withholding_tax_cert{
     font-family: 'THSarabun';
-    font-size: 26px;
+    font-size: 24px;
 
+    .number_payment {
+        position: fixed;
+        top: 100px;
+        right: 200px;
+    }
     .company_vat {
         margin-left: 730px;
         position: fixed;
@@ -50,7 +55,7 @@
     .supplier_address {
         margin-left: 113px;
         position: fixed;
-        top: 375px;
+        top: 376px;
         box-sizing: content-box;
         width: 1000px;
         height: 40px;
@@ -94,95 +99,95 @@
     .type_1_date {
         position: fixed;
         top: 561px;
-        right: 390px;
+        right: 400px;
     }
     .type_1_base {
         position: fixed;
         top: 561px;
-        right: 205px;
+        right: 209px;
     }
     .type_1_tax {
         position: fixed;
         top: 561px;
-        right: 70px;
+        right: 73px;
     }
     .type_2_date {
         position: fixed;
         top: 588px;
-        right: 390px;
+        right: 400px;
     }
     .type_2_base {
         position: fixed;
         top: 588px;
-        right: 205px;
+        right: 209px;
     }
     .type_2_tax {
         position: fixed;
         top: 588px;
-        right: 70px;
+        right: 73px;
     }
     .type_3_date {
         position: fixed;
         top: 615px;
-        right: 390px;
+        right: 400px;
     }
     .type_3_base {
         position: fixed;
         top: 615px;
-        right: 205px;
+        right: 209px;
     }
     .type_3_tax {
         position: fixed;
         top: 615px;
-        right: 70px;
+        right: 73px;
     }
     .type_5_date {
         position: fixed;
         top: 1167px;
-        right: 390px;
+        right: 400px;
     }
     .type_5_base {
         position: fixed;
         top: 1167px;
-        right: 205px;
+        right: 209px;
     }
     .type_5_tax {
         position: fixed;
         top: 1167px;
-        right: 70px;
+        right: 73px;
     }
     .type_6_description {
         position: fixed;
         box-sizing: content-box;
         width: 450px;
         height: 40px;
-        top: 1194px;
+        top: 1197px;
         left: 200px;
     }
     .type_6_date {
         position: fixed;
-        top: 1194px;
-        right: 390px;
+        top: 1195px;
+        right: 400px;
     }
     .type_6_base {
         position: fixed;
-        top: 1194px;
-        right: 205px;
+        top: 1195px;
+        right: 209px;
     }
     .type_6_tax {
         position: fixed;
-        top: 1194px;
-        right: 70px;
+        top: 1195px;
+        right: 73px;
     }
     .total_amount {
         position: fixed;
         top: 1233px;
-        right: 205px;
+        right: 209px;
     }
     .total_tax {
         position: fixed;
         top: 1233px;
-        right: 70px;
+        right: 73px;
     }
     .text_amount {
         position: fixed;
