--- a/rjc_account_form/reports/invoice_tax_layout.xml
+++ b/rjc_account_form/reports/invoice_tax_layout.xml
@@ -45,7 +45,7 @@
                                     <span t-field="line.uom_id" groups="uom.group_uom"/>
                                 </td>
                                 <td class="text-right">
-                                    <span t-field="line.price_unit"/>
+                                    <span t-esc="'{0:,.2f}'.format(line.price_unit)"/>
                                 </td>
                                 <td class="text-right">
                                     <span t-field="line.price_subtotal"/>
