--- a/rjc_purchase_order_form/reports/purchase_order_layout.xml
+++ b/rjc_purchase_order_form/reports/purchase_order_layout.xml
@@ -75,7 +75,7 @@
                         </td>
                         <t t-if="line.secondary_uom_id">
                             <td class="text-center">
-                                <span t-field="line.secondary_uom_qty"/>
+                                <span t-esc="'{0:,.2f}'.format(line.secondary_uom_qty)"/>
                             </td>
                             <td class="text-center">
                                 <span t-field="line.secondary_uom_id.name"/>
@@ -86,7 +86,7 @@
                         </t>
                         <t t-if="not line.secondary_uom_id">
                             <td class="text-center">
-                                <span t-field="line.product_qty"/>
+                                <span t-esc="'{0:,.2f}'.format(line.product_qty)"/>
                             </td>
                             <td class="text-center">
                                 <span t-field="line.product_uom.name" groups="uom.group_uom"/>
