--- a/rjc_sale_form/reports/sale_report_templates.xml
+++ b/rjc_sale_form/reports/sale_report_templates.xml
@@ -4,5 +4,8 @@
         <span t-field="line.price_unit" position="replace">
             <span t-esc="'{0:,.2f}'.format(line.price_unit)"/>
         </span>
+        <span t-field="line.product_uom_qty" position="replace">
+            <span t-esc="'{0:,.2f}'.format(line.product_uom_qty)"/>
+        </span>
     </template>
 </odoo>
