--- a/rjc_stock_form/reports/deliveryslip_layout.xml
+++ b/rjc_stock_form/reports/deliveryslip_layout.xml
@@ -98,7 +98,7 @@
                                     <span t-field="move.name"/>
                                 </td>
                                 <td>
-                                    <span t-field="move.product_uom_qty"/>
+                                    <span t-esc="'{0:,.2f}'.format(move.product_uom_qty)"/>
                                     <span t-field="move.product_uom"/>
                                 </td>
                             </tr>
@@ -109,9 +109,14 @@
                         <thead>
                             <tr>
                                 <th><strong>Description</strong></th>
-                                <th name="lot_serial" t-if="has_serial_number" groups="stock.group_lot_on_delivery_slip">
-                                    Lot/Serial Number
-                                </th>
+                                <t t-if="has_serial_number">
+                                    <th name="lot_serial" groups="stock.group_lot_on_delivery_slip">
+                                        Lot/Serial Number
+                                    </th>
+                                </t>
+                                <t t-else="">
+                                    <th name="lot_serial" groups="stock.group_lot_on_delivery_slip"/>
+                                </t>
                                 <th class="text-center"><strong>Quantity</strong></th>
                             </tr>
                         </thead>
@@ -127,7 +132,7 @@
                                     <span t-field="move_line.lot_id.name"/>
                                 </td>
                                 <td class="text-center">
-                                    <span t-field="move_line.qty_done"/>
+                                    <span t-esc="'{0:,.2f}'.format(move_line.qty_done)"/>
                                     <span t-field="move_line.product_uom_id"/>
                                 </td>
                             </tr>
