--- a/rjc_account_form/reports/wht_cert_layout.xml
+++ b/rjc_account_form/reports/wht_cert_layout.xml
@@ -25,9 +25,9 @@
             </div>
             <div class="company_address">
                 <t t-if="o.company_partner_id.street"><span t-field="o.company_partner_id.street"/></t>
-                <t t-if="o.company_partner_id.street2"><span>,</span><span t-field="o.company_partner_id.street2"/></t>
-                <t t-if="o.company_partner_id.city"><span>,</span><span t-field="o.company_partner_id.city"/></t>
-                <t t-if="o.company_partner_id.state_id"><span>,</span><span t-field="o.company_partner_id.state_id"/></t>
+                <t t-if="o.company_partner_id.street2"><span t-field="o.company_partner_id.street2"/></t>
+                <t t-if="o.company_partner_id.city"><span t-field="o.company_partner_id.city"/></t>
+                <t t-if="o.company_partner_id.state_id"><span t-field="o.company_partner_id.state_id"/></t>
                 <t t-if="o.company_partner_id.zip"><span t-field="o.company_partner_id.zip"/></t>
             </div>
             <div class="supplier_vat">
@@ -54,9 +54,9 @@
             </div>
             <div class="supplier_address">
                 <t t-if="o.supplier_partner_id.street"><span t-field="o.supplier_partner_id.street"/></t>
-                <t t-if="o.supplier_partner_id.street2"><span>,</span><span t-field="o.supplier_partner_id.street2"/></t>
-                <t t-if="o.supplier_partner_id.city"><span>,</span><span t-field="o.supplier_partner_id.city"/></t>
-                <t t-if="o.supplier_partner_id.state_id"><span>,</span><span t-field="o.supplier_partner_id.state_id"/></t>
+                <t t-if="o.supplier_partner_id.street2"><span t-field="o.supplier_partner_id.street2"/></t>
+                <t t-if="o.supplier_partner_id.city"><span t-field="o.supplier_partner_id.city"/></t>
+                <t t-if="o.supplier_partner_id.state_id"><span t-field="o.supplier_partner_id.state_id"/></t>
                 <t t-if="o.supplier_partner_id.zip"><span t-field="o.supplier_partner_id.zip"/></t>
             </div>
             <t t-if="o.income_tax_form == 'pnd1'">
