--- a/rjc_account_form/reports/payment_voucher_layout.xml
+++ b/rjc_account_form/reports/payment_voucher_layout.xml
@@ -132,7 +132,7 @@
                         <!-- Tax Adjustment Case -->
                         <t t-if="not o.expense_sheet_id and not o.reconciled_invoice_ids">
                             <t t-set="move_id" t-value="o._get_move_line()"/>
-                            <tr>
+                            <tr t-if="move_id">
                                 <td/>
                                 <td>
                                     <span t-esc="move_id.name"/>
