--- a/l10n_th_asset_register_report/view/report_template.xml
+++ b/l10n_th_asset_register_report/view/report_template.xml
@@ -22,7 +22,7 @@
     <record id="action_report_asset_register" model="ir.actions.client">
         <field name="name">Asset Register</field>
         <field name="tag">l10n_th_asset_register_report_backend</field>
-        <field name="context" eval="{'active_model': 'report_asset_register'}" />
+        <field name="context" eval="{'active_model': 'report.asset.register'}" />
     </record>
 
 </odoo>
