[ADD] filter billing in invoice

--- a/rjc_account/views/account_invoice_view.xml
+++ b/rjc_account/views/account_invoice_view.xml
@@ -28,6 +28,7 @@
         <field name="arch" type="xml">
             <field name="number" position="after">
                 <field name="number_preprint" string="Preprint Number"/>
+                <field name="billing_id" string="Billing Number"/>
             </field>
         </field>
     </record>
