--- a/rjc_payment_intransit/views/account_payment_view.xml
+++ b/rjc_payment_intransit/views/account_payment_view.xml
@@ -16,7 +16,7 @@
                 <field name="has_intransit" invisible="1"/>
             </xpath>
             <xpath expr="/form/sheet" position="inside">
-                <notebook name="payment_intransit">
+                <notebook name="payment_intransit" attrs="{'invisible':[('payment_type', '!=', 'inbound')]}">
                     <page string="Payment Intransit" name="payment_intransit_line">
                         <field name="payment_intransit_line_ids" context="{'payment_id': id, 'name': name}" attrs="{'readonly': [('has_intransit', '!=', False)]}">
                             <tree editable="bottom">
